--- a/etc/publishing-list/index.html
+++ b/etc/publishing-list/index.html
@@ -17,7 +17,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" />
-    <link rel="stylesheet" href="http://notsun.com/_Guide/css/guide.css" />
+    <link rel="stylesheet" href="https://baekcode.github.io/etc/publishing-list/assets/css/guide.css" />
 </head>
 
 <body>
