--- a/2021-11-14/todolist/index.html
+++ b/2021-11-14/todolist/index.html
@@ -91,8 +91,14 @@ data-styled.g16[id="style__PostData-sc-ijk0er-5"]{content:"kFclQp,"}/*!sc*/
 <ul class="contains-task-list">
 <li class="task-list-item"><input type="checkbox" checked disabled> 이력서 리뉴얼 (PDF)</li>
 <li class="task-list-item"><input type="checkbox" disabled> 스타트업 관련 글 작성</li>
-<li class="task-list-item"><input type="checkbox" disabled> 개인 업무</li>
-<li class="task-list-item"><input type="checkbox" disabled> 저녁 운동</li>
+<li class="task-list-item"><input type="checkbox" checked disabled> 개인 업무</li>
+<li class="task-list-item"><input type="checkbox" checked disabled> 저녁 운동</li>
+</ul>
+<h5>11.16(화) 할 일</h5>
+<ul class="contains-task-list">
+<li class="task-list-item"><input type="checkbox" disabled> 기업 채용 조사</li>
+<li class="task-list-item"><input type="checkbox" disabled> 모의 과제</li>
+<li>[ ]</li>
 </ul></div><div></div></main><footer style="margin-top:2rem" class="style__Footer-sc-1v9vg5k-2 dirWAb"><a href="https://github.com/baekcode" target="_blank">© <!-- -->DEV baekcode</a></footer></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script>
   
   
