--- a/2021-11-14/todolist/index.html
+++ b/2021-11-14/todolist/index.html
@@ -94,12 +94,17 @@ data-styled.g16[id="style__PostData-sc-ijk0er-5"]{content:"kFclQp,"}/*!sc*/
 <li class="task-list-item"><input type="checkbox" checked disabled> 개인 업무</li>
 <li class="task-list-item"><input type="checkbox" checked disabled> 저녁 운동</li>
 </ul>
+<p><strong>11.15 회고</strong></p>
+<p>이전에 작성했던 이력서가 충분히 많은 도움이 되어 조금만 수정하여 리뉴얼하였다.</p>
+<p>퇴사처리를 위한 개인적인 업무가 많아서 “스타트업 관련 글 작성”을 하지 못했다.</p>
+<p>월요일팀 풋살을 2주 쉬고 오랜만에 다녀왔다</p>
 <h5>11.16(화) 할 일</h5>
 <ul class="contains-task-list">
-<li class="task-list-item"><input type="checkbox" disabled> 기업 채용 조사</li>
+<li class="task-list-item"><input type="checkbox" checked disabled> 기업 채용 조사</li>
 <li class="task-list-item"><input type="checkbox" disabled> 모의 과제</li>
-<li>[ ]</li>
-</ul></div><div></div></main><footer style="margin-top:2rem" class="style__Footer-sc-1v9vg5k-2 dirWAb"><a href="https://github.com/baekcode" target="_blank">© <!-- -->DEV baekcode</a></footer></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script>
+</ul>
+<p><strong>11.16 회고</strong></p>
+<p>눈뜨자마자 기업 채용 조사를 했다. 이후 개인적인 업무를 보았으며 저녁에는 디온 써니를 만나 육회 &#x26; 치맥을 하고 왔다.</p></div><div></div></main><footer style="margin-top:2rem" class="style__Footer-sc-1v9vg5k-2 dirWAb"><a href="https://github.com/baekcode" target="_blank">© <!-- -->DEV baekcode</a></footer></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script>
   
   
   if(true) {
