--- a/2021-11-15/dev-setting/index.html
+++ b/2021-11-15/dev-setting/index.html
@@ -101,7 +101,7 @@ data-styled.g16[id="style__PostData-sc-ijk0er-5"]{content:"kFclQp,"}/*!sc*/
 <h2>Intellij Preferences</h2>
 <h5>General</h5>
 <p>On save > Ensure every saved file ends with a line break 활성화</p>
-<p><img src="https://s3.us-west-2.amazonaws.com/secure.notion-static.com/e4668e35-db0b-4641-90d1-f38b3e057b31/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&#x26;X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20211115%2Fus-west-2%2Fs3%2Faws4_request&#x26;X-Amz-Date=20211115T071908Z&#x26;X-Amz-Expires=86400&#x26;X-Amz-Signature=74761b9165a52a15cbad45afd3bf40c831225c417a9bd9481e457268e895339a&#x26;X-Amz-SignedHeaders=host&#x26;response-content-disposition=filename%20%3D%22Untitled.png%22" alt="Untitled"></p>
+<p><img src="https://user-images.githubusercontent.com/85144569/142137855-8c9381e6-80a3-488e-9d64-7e6aefc8aa9b.png" alt="image"></p>
 <p>위와같은 문제가 발생하지 않도록 해줄 수 있습니다.</p>
 <h5>Code Style</h5>
 <p><strong>HTML</strong></p>
