--- a/2021-11-17/ux-ui/index.html
+++ b/2021-11-17/ux-ui/index.html
@@ -90,9 +90,10 @@ data-styled.g16[id="style__PostData-sc-ijk0er-5"]{content:"kFclQp,"}/*!sc*/
 <ul>
 <li>Post 글이 늘어날수록 <code class="language-text">#태그 메뉴</code> 도 늘어날것이다.</li>
 <li>반응형일때는 역시나 이상하게 보인다.</li>
-<li>생성되는 <code class="language-text">#태그 메뉴</code> 정렬이 필요하다.
+<li>생성되는 <code class="language-text">#태그 메뉴</code> 정렬 기준이 필요하다.
 <ul>
-<li>태그의 알파벳 순서 or 태그가 많은 순서</li>
+<li>1순위 : 태그가 많은 수</li>
+<li>2순위 : 알파벳 순서</li>
 </ul>
 </li>
 </ul>
