--- a/2021-11-14/todolist/index.html
+++ b/2021-11-14/todolist/index.html
@@ -147,7 +147,8 @@ data-styled.g21[id="style__PostData-sc-ijk0er-5"]{content:"kFclQp,"}/*!sc*/
 </ul>
 <h3>11.18(목) 할 일</h3>
 <ul class="contains-task-list">
-<li class="task-list-item"><input type="checkbox" disabled> 개인 일정</li>
+<li class="task-list-item"><input type="checkbox" checked disabled> 개인 일정</li>
+<li class="task-list-item"><input type="checkbox" checked disabled> 노션 자료 정리</li>
 <li class="task-list-item"><input type="checkbox" checked disabled> 블로그 - 카테고리 리스트 UI 수정</li>
 <li class="task-list-item"><input type="checkbox" disabled> 블로그 - 카테고리 리스트 onClick 기능 붙이기</li>
 </ul></div><div></div></main><footer style="margin-top:2rem" class="style__Footer-sc-1v9vg5k-2 dirWAb"><a href="https://github.com/baekcode" target="_blank">@baekcode</a></footer></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script>
